# tic-tac-toe

./: docker-compose.yml
frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts
frontend/src/app/auth/: auth.service.ts
frontend/src/app/auth/dto/: auth-request.ts  auth-response.ts  register-request.ts
frontend/src/app/auth/modal-login/: modal-login.component.css  (+2 more)
frontend/src/app/board/: board.component.css  board.component.html  board.component.ts  field.pipe.spec.ts  field.pipe.ts  websocket.service.ts
frontend/src/app/error/: error.interceptor.ts
frontend/src/app/game-list/: game-list.component.html  game-list.component.ts
frontend/src/app/main/: game-management.service.ts
frontend/src/app/menu/: menu.component.css  menu.component.html  menu.component.ts
frontend/src/app/new-game-modal/: new-game-modal.component.html  new-game-modal.component.spec.ts  new-game-modal.component.ts
frontend/src/environments/: environment.prod.ts
game/: Dockerfile  pom.xml
game-engine/: .gitignore  Cargo.toml  Dockerfile
game-engine/src/: board.rs  main.rs  minmax.rs  rabbit.rs
game/src/main/resources/: application.properties
gateway/: Dockerfile  pom.xml
gateway/src/main/resources/: application.yaml
main/: Dockerfile  pom.xml
main/src/main/resources/: application-dev.properties
tui/: auth_service.go  drawing.go  go.mod  go.sum  input.go  main.go  main_service.go  model.go  websocket_service.go
(+85 files in other folders)
